# app.js
@@ -2,13 +2,16 @@ require('dotenv').config();
 const express = require('express');
 const bodyParser = require('body-parser');
 const webhookRoutes = require('./routes/webhook');
+const printQueueRoutes = require('./routes/printqueue');
 const swaggerUi = require('swagger-ui-express');
 const YAML = require('yamljs');
 const swaggerDocument = YAML.load('./swagger.yaml');
+require('./db/mongoose');
 
 const app = express();
 app.use(bodyParser.json());
 app.use('/webhook', webhookRoutes);
+app.use('/printqueue', printQueueRoutes);
 app.use('/api-docs', swaggerUi.serve, swaggerUi.setup(swaggerDocument));
 
 const PORT = process.env.PORT || 3000;
